# vpx-custom-enc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libvpx_make_debug.sh  libvpx_make_so.sh
libvpx_mod/: bitreader.c  bitreader.h  decodeframe.c  vp8_dx_iface.c  vp9_decodeframe.c  vp9_decodemv.c  vp9_detokenize.c  vp9_dx_iface.c
script/: compare_psnr.sh  ffmpeg_test.sh  lossless_encode.sh  measure_quality.sh  run_all.sh  vp8_test.sh  vpx_test.sh
src/: benchmark_vp8.py  benchmark_vp9.py  measure_quality.py  my_vpxenc.cpp  png-to-yuv.py  simple_encoder.c  vpxenc.c  vpxenc_api.c  vpxenc_api.h
